src/base/objects/Integration_Logs__c/fields/API_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>API_Call_Count__c</fullName>
    <label>API Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>