src/base/objects/Integration_Logs__c/fields/API_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Type__c</fullName>
    <label>API Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOAP</fullName>
            </value>
            <value>
                <fullName>REST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>