src/base/objects/Integration_Logs__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Api Total Usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>