src/base/objects/Integration_Logs__c/fields/Integration_User__c.field-meta.xml
<CustomField>
    <fullName>Integration_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>