src/base/objects/Integration_Logs__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>