src/base/objects/Integration_Logs__c/fields/Request_URI__c.field-meta.xml
<CustomField>
    <fullName>Request_URI__c</fullName>
    <label>Request URI</label>
    <type>TextArea</type>
</CustomField>