src/base/objects/Integration_Logs__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <label>Response Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>